--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Node",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "pm2 start ./app.js"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
