--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "pm2 start ./app.js"
+    "start": "npm install& pm2 start ./app.js"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
